gcc/testsuite/gdc.test/fail_compilation/fail4269d.d

static if(is(typeof(X6.init))) {}
alias Y X6;

void main() {}
